@@ -1,0 +1,2 @@
+UPDATE `aa_actions` SET `spell_id` = '5244', `nonspell_action` = '0' WHERE `aaid` = '243';
+UDPATE `altadv_vars` SET `spell_id` = '5244' WHERE `skill_id` = '243';
