@@ -2039,8 +2039,13 @@ bool Mob::SpellEffect(Mob* caster, uint16 spell_id, float partial)
 #ifdef SPELL_EFFECT_SPAM
 				snprintf(effect_desc, _EDLEN, "Fading Memories");
 #endif
-				entity_list.RemoveFromTargets(caster);
-				SetInvisible(1);
+                if(caster && caster->IsClient())
+                    caster->CastToClient()->Escape();
+                else
+                {
+                    entity_list.RemoveFromTargets(caster);
+                    SetInvisible(1);
+                }
 				break;
 			}
 
